// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    color="grey"
    size="large"
  />
</View>
`;

exports[`renders screenA with providers correctly 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "lightgreen",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
/>
`;
